# interview_tekmetric

ml/: config.yaml  my_readme.md  pyproject.toml
ml/data/: dataset.csv
ml/docker/: docker-compose.yaml
ml/eda/: CarsExploratoryDataAnalysis.ipynb
ml/src/: app.py  main.py
ml/src/api/: models.py  routes.py
ml/src/cache/: cache.py  memory_cache.py  redis_cache.py
ml/src/core/: config.py  interfaces.py
ml/src/models/: classifier.py  local_model_repository.py  trained_classifier.py
ml/src/service/: repair_service.py
ml/src/similarity/: searcher.py
ml/tests/: test_redis_cache.py  test_repair_service.py  test_similarity_searcher.py  testing_api_prediction.http
